<resources>
    <string name="app_name">UdacityCapstone</string>
    <string name="content_authority">com.belenos.udacitycapstone</string>

    <string name="server_host">104.199.60.228</string>
    <string name="server_port">80</string>


    <!-- Strings related to login -->
    <string name="user_first_greeting">Welcome %1$s!</string>
    <string name="user_greeting">Hey %1$s!</string>

    <string name="onboarding_pick_a_language">Pick a language and start learning!</string>
    <string name="widget_onboarding">Hey %1$s, pick a language and start learning!</string>
    <string name="i_want_to_learn">I want to learn…</string>
    <string name="start_learning">Start learning</string>
    <string name="flag_content_description">language flag</string>
    <string name="my_languages">My languages:</string>
    <string name="resume_learning">Resume learning</string>
    <string name="sign_in_different_account"><u>Sign in with a different account</u></string>
    <string name="start_learning_new">Start learning a new language</string>
    <string name="learn_next_pick_a_language">What do you want to learn next?</string>
    <string name="translate_into_language">Translate the phrase above into %1$s.</string>
    <string name="check_answer">Check my answer</string>

    <string name="answer_correct_toast">Correct!</string>
    <string name="answer_incorrect_toast">That\'s not it! Try again or flip the card!</string>
    <string name="no_network_cant_add_language">You need to be connected to the internet to start learning a new language!</string>
    <string name="error_invalid_response">Sorry, we could not fetch proper data from our server.</string>
    <string name="error_server_down">Sorry, our server seems to be down and we can\'t get language data from it.</string>
    <string name="title_widget">Keep learning!</string>
    <string name="sync_account_type">udacitycapstone.belenos.com</string>
    <string name="error_insert_user">Sorry, something went wrong and we could not log you in.</string>
    <string name="debug_underlined"><u>Bouga centered?</u></string>
    <string name="no_more_new_languages">Woops! Looks like we don\'t have a new language for you to learn at the moment!</string>
    <string name="login_welcome">Welcome!\nSign in with Google to start learning a language.</string>
    <string name="widget_card_count_last_48"> Cards in the last 48 hours: %1$d</string>
    <string name="flags_application_logo">Flags - Application logo</string>
    <string name="please_check_connection">We could not join our server. Please make sure you are connected to the internet.</string>
    <string name="google_sign_in_default_display_name">Mysterious user</string>
    <string name="add_a_new_language">Add a new language</string>
</resources>
