<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:orientation="vertical"
    tools:context="com.belenos.udacitycapstone.OnboardingFragment">


        <TextView
            android:id="@+id/user_name_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            tools:text="bouga" />

        <TextView
            android:id="@+id/call_to_action_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:text="@string/onboarding_pick_a_language"
            />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            style="@style/onboardingLinearLayout"
            >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/i_want_to_learn"
            android:textAppearance="@style/header"
            />

        <TextView
            android:id="@+id/empty_wheel_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/no_more_new_languages"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:visibility="gone"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >

            <com.aigestudio.wheelpicker.WheelPicker
                android:id="@+id/wheel_picker"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_margin="@dimen/activity_vertical_margin"

                android:background="@android:color/white"
                app:wheel_atmospheric="true"
                app:wheel_curved="true"
                app:wheel_cyclic="true"
                app:wheel_item_align="center"
                app:wheel_item_text_color="#A7A7DB"
                app:wheel_item_text_size="20sp"
                app:wheel_selected_item_text_color="#536D8A"
                />

            <ImageView
                android:id="@+id/flag_image_view"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/activity_vertical_margin"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:contentDescription="@string/flag_content_description" />

        </LinearLayout>


    </LinearLayout>

    <Button
        android:id="@+id/start_learning_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/start_learning"
        style="@style/Widget.AppCompat.Button.Colored"
        />

    <android.support.v4.widget.ContentLoadingProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        style="@android:style/Widget.Material.ProgressBar.Large"
        android:visibility="gone"
        />

</LinearLayout>
